fix crashing onclick on group goal card

--- a/app/src/main/res/layout/activity_edit_group_goal.xml
+++ b/app/src/main/res/layout/activity_edit_group_goal.xml
@@ -134,6 +134,7 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/groupDeleteBtn"
                         android:layout_width="170dp"
                         android:layout_height="60dp"
                         android:layout_marginRight="1dp"
