--- a/app/src/main/res/layout/group_income_transactions_row.xml
+++ b/app/src/main/res/layout/group_income_transactions_row.xml
@@ -43,21 +43,14 @@
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/groupIncomeAmount"
+                        android:id="@+id/groupIncomePeriod"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1000,000"
-                        android:textStyle="bold"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
+                        android:text="weekly"
+                        android:textSize="12sp"
+                        android:textColor="#6a6a6a" />
 
-                    <TextView
-                        android:layout_marginLeft="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="USh"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
+
 
                 </LinearLayout>
 
@@ -67,21 +60,37 @@
                     android:orientation="horizontal">
                     <TextView
                         android:id="@+id/groupIncomeSource"
-                        android:layout_width="210dp"
+                        android:layout_width="200dp"
                         android:layout_marginTop="5dp"
                         android:layout_height="wrap_content"
                         android:text="Source"
                         android:textSize="12sp"
                         android:textColor="@color/black"/>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                     <TextView
-                        android:id="@+id/groupIncomePeriod"
+                        android:layout_marginLeft="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="12/3/2018"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12sp"
+                        android:text="UGX: "
+                        android:textSize="14sp"
                         android:textColor="@color/red" />
+
+                    <TextView
+                        android:id="@+id/groupIncomeAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1,000,000"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:textColor="@color/red" />
+
                 </LinearLayout>
 
                 <LinearLayout
