--- a/app/src/main/res/layout/group_members_income_transaction_row.xml
+++ b/app/src/main/res/layout/group_members_income_transaction_row.xml
@@ -42,6 +42,46 @@
                         android:textStyle="bold"/>
 
                     <TextView
+                        android:id="@+id/groupMemberIncomePeriod"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="12/3/2018"
+                        android:textSize="12sp"
+                        android:textColor="#6a6a6a" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+                    <TextView
+                        android:id="@+id/groupMemberIncomeSource"
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:text="Income"
+                        android:textSize="12sp"
+                        android:textColor="@color/black"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+
+                    <TextView
+                        android:layout_marginLeft="2dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="UGX: "
+                        android:textSize="14sp"
+                        android:textColor="@color/red" />
+
+                    <TextView
                         android:id="@+id/groupMemberIncomeAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -50,50 +90,21 @@
                         android:textSize="14sp"
                         android:textColor="@color/red" />
 
-                    <TextView
-                        android:layout_marginLeft="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="USh"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/groupMemberIncomeSource"
-                        android:layout_width="210dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_height="wrap_content"
-                        android:text="Income"
-                        android:textSize="12sp"
-                        android:textColor="@color/black"/>
-
-                    <TextView
-                        android:id="@+id/groupMemberIncomePeriod"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="12/3/2018"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12sp"
-                        android:textColor="@color/red" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp">
 
                     <TextView
                         android:id="@+id/groupMemberIncomeNotes"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="12/3/2018"
-                        android:layout_marginTop="5dp"
+                        android:text="This is the notes section"
                         android:textSize="16sp" />
                 </LinearLayout>
 
