--- a/app/src/main/res/layout/group_savings_row.xml
+++ b/app/src/main/res/layout/group_savings_row.xml
@@ -72,7 +72,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="USh:"
+                        android:text="UGX:"
                         android:textSize="14sp"
                         android:textColor="@color/red"/>
 
