--- a/app/src/main/res/layout/member_savings_row.xml
+++ b/app/src/main/res/layout/member_savings_row.xml
@@ -45,7 +45,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="USh:"
+                        android:text="UGX:"
                         android:textSize="14sp"
                         android:textColor="@color/red" />
 
@@ -76,22 +76,13 @@
                         android:textColor="@color/black"/>
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Date Added:"
-                        android:textSize="14sp"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/red" />
-
-                    <TextView
                         android:id="@+id/dateAdded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="12/3/2018"
                         android:layout_marginTop="5dp"
-                        android:layout_marginLeft="5dp"
                         android:textSize="12sp"
-                        android:textColor="@color/red" />
+                        android:textColor="#6a6a6a" />
                 </LinearLayout>
 
             </LinearLayout>
