--- a/app/src/main/res/layout/group_expenditure_transactions_row.xml
+++ b/app/src/main/res/layout/group_expenditure_transactions_row.xml
@@ -43,21 +43,12 @@
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/groupExpenditureAmount"
+                        android:id="@+id/groupExpenditureDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1000,000"
-                        android:textStyle="bold"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
-
-                    <TextView
-                        android:layout_marginLeft="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="USh"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
+                        android:text="12/3/2018"
+                        android:textSize="12sp"
+                        android:textColor="#6a6a6a" />
 
                 </LinearLayout>
 
@@ -74,13 +65,28 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"/>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                     <TextView
-                        android:id="@+id/groupExpenditureDate"
+                        android:layout_marginLeft="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="12/3/2018"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12sp"
+                        android:text="UGX: "
+                        android:textSize="14sp"
+                        android:textColor="@color/red" />
+
+                    <TextView
+                        android:id="@+id/groupExpenditureAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1000,000"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
                         android:textColor="@color/red" />
                 </LinearLayout>
 
@@ -91,6 +97,7 @@
                     <TextView
                         android:textStyle="bold"
                         android:layout_width="match_parent"
+                        android:text="This is the notes section"
                         android:layout_height="wrap_content"
                         android:id="@+id/groupExpenditureNotes"/>
                 </LinearLayout>
