--- a/app/src/main/res/layout/group_members_expenditure_row.xml
+++ b/app/src/main/res/layout/group_members_expenditure_row.xml
@@ -43,21 +43,12 @@
                         android:textStyle="bold"/>
 
                     <TextView
-                        android:id="@+id/groupMembersExpenditureAmount"
+                        android:id="@+id/groupMembersExpenditureDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1000,000"
-                        android:textStyle="bold"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
-
-                    <TextView
-                        android:layout_marginLeft="2dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="USh"
-                        android:textSize="14sp"
-                        android:textColor="@color/red" />
+                        android:text="Weekly"
+                        android:textSize="12sp"
+                        android:textColor="#6a6a6a" />
 
                 </LinearLayout>
 
@@ -74,14 +65,30 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"/>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                     <TextView
-                        android:id="@+id/groupMembersExpenditureDate"
+                        android:layout_marginLeft="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Notes"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12sp"
+                        android:text="UGX: "
+                        android:textSize="14sp"
                         android:textColor="@color/red" />
+
+                    <TextView
+                        android:id="@+id/groupMembersExpenditureAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1,000,000"
+                        android:textStyle="bold"
+                        android:textSize="14sp"
+                        android:textColor="@color/red" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -91,6 +98,7 @@
                     android:orientation="horizontal">
                     <TextView
                         android:textStyle="bold"
+                        android:text="This is the notes section"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/groupMembersExpenditureNotes"/>
